--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,27 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.headerDiv{
+  background-color: #00918e;
+  width: 100%;
+  height: 80px;
+}
+
+.cursor-pointer{
+  cursor: pointer;
+}
+
+.statusButton {
+  font-size: 12px;
+    display: inline-block;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    padding: 5px 30px;
+    background: #00918e;
+    border-radius: 30px;
+    color: #fff;
+    letter-spacing: .2em;
+    text-transform: uppercase;
+}
