--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,8 @@ code {
     letter-spacing: .2em;
     text-transform: uppercase;
 }
+
+.small-header{
+  min-height: 120px !important;
+  height: calc(20vh) !important;
+}
