--- a/src/index.css
+++ b/src/index.css
@@ -97,3 +97,30 @@ code {
   justify-content: end;
 }
 
+.profile {
+  background: #00918e;
+    padding-top: 4px !important;
+    padding-bottom: 4px !important;
+    padding-left: 8px !important;
+    padding-right: 20px !important;
+    color: white;
+    font-size: 18px;
+    font-weight: 400;
+    border: 2px solid white;
+}
+
+.site-navbar .site-navigation .site-menu .has-children>a span:before{
+  top: 51% !important;
+    right: 5px !important;
+}
+
+.site-navbar .site-navigation .site-menu .has-children .dropdown.arrow-top:before{
+  left: 85% !important;
+}
+
+.site-navbar .site-navigation .site-menu .has-children .dropdown>li{
+  min-width: 114px !important;
+}
+.site-navbar .site-navigation .site-menu .has-children .dropdown{
+  right: 0 !important;
+}
