--- a/src/index.css
+++ b/src/index.css
@@ -220,3 +220,12 @@ button.close{
 .flex{
   display: flex;
 }
+
+.reviewView{
+  padding: 10px !important;
+  padding-bottom: 0px !important;
+}
+
+.font-12{
+  font-size: 12px;
+}
