--- a/src/index.css
+++ b/src/index.css
@@ -103,6 +103,11 @@ code {
   justify-content: space-evenly;
 }
 
+.justify-content-space-between{
+  display: flex;
+  justify-content: space-between;
+}
+
 .text-align-center{
   text-align: center;
 }
